<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTopBlack"
    tools:context="presentation.ui.fragment.register.RegisterFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/angmuburi"
        android:text="@string/main_tv"
        android:textColor="@color/colorWhite"
        android:textSize="60sp"
        app:layout_constraintEnd_toStartOf="@+id/register_gl_right"
        app:layout_constraintStart_toStartOf="@+id/register_gl_left"
        app:layout_constraintTop_toTopOf="@+id/register_gl_top" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_email_et_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@null"
        android:hint=" "
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/register_gl_right"
        app:layout_constraintStart_toStartOf="@+id/register_gl_left"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_email_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_selector"
            android:fontFamily="@font/notosanskr_thin"
            android:hint="@string/email_tv"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textCursorDrawable="@drawable/cursor_orange"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_pw_et_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:visibility="gone"
        android:hint=" "
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/register_gl_right"
        app:layout_constraintStart_toStartOf="@+id/register_gl_left"
        app:layout_constraintTop_toBottomOf="@+id/register_email_et_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_pw_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_selector"
            android:fontFamily="@font/notosanskr_thin"
            android:hint="@string/pw_tv"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textCursorDrawable="@drawable/cursor_orange"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_next_btn"
        android:layout_marginTop="40dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gray_radius_view"
        android:text="다음"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/register_gl_right"
        app:layout_constraintStart_toStartOf="@+id/register_gl_left"
        app:layout_constraintTop_toBottomOf="@+id/register_pw_et_layout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/register_gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/register_gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.86" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/register_gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

</androidx.constraintlayout.widget.ConstraintLayout>