<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTopBlack"
    tools:context=".presentation.ui.fragment.main.mypage.etc.change.ChangePasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorMiddleBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/change_password_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/change_password_back_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/notosanskr_regular"
            android:includeFontPadding="false"
            android:text="@string/back_tv"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/change_password_back_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password_tv"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="비밀번호를 변경하면 재로그인이 필요합니다."
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/change_password_gl_right"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="@+id/change_password_gl_left"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/change_password_et_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint=" "
        android:layout_marginTop="40dp"
        android:visibility="visible"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/change_password_gl_right"
        app:layout_constraintStart_toStartOf="@+id/change_password_gl_left"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <com.add.ad.presentation.ui.customView.ClearEditText
            android:id="@+id/change_password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_selector"
            android:fontFamily="@font/notosanskr_thin"
            android:hint="@string/pw_tv"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textCursorDrawable="@drawable/cursor_orange"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/change_password_check_et_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint=" "
        android:visibility="visible"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/change_password_gl_right"
        app:layout_constraintStart_toStartOf="@+id/change_password_gl_left"
        app:layout_constraintTop_toBottomOf="@+id/change_password_et_layout">

        <com.add.ad.presentation.ui.customView.ClearEditText
            android:id="@+id/change_password_check_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_selector"
            android:fontFamily="@font/notosanskr_thin"
            android:hint="@string/pw_check_tv"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textCursorDrawable="@drawable/cursor_orange"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/change_password_next_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/gray_radius_view"
        android:text="다음"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/change_password_gl_right"
        app:layout_constraintStart_toStartOf="@+id/change_password_gl_left"
        app:layout_constraintTop_toBottomOf="@+id/change_password_check_et_layout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/change_password_gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/change_password_gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.86" />

</androidx.constraintlayout.widget.ConstraintLayout>