<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.add.ad.presentation.viewModel.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTopBlack"
        tools:context=".presentation.ui.fragment.register.FirstRegisterFragment">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/angmuburi"
            android:text="@string/main_tv"
            android:textColor="@color/colorWhite"
            android:textSize="60sp"
            app:layout_constraintEnd_toStartOf="@+id/register_gl_right"
            app:layout_constraintStart_toStartOf="@+id/register_gl_left"
            app:layout_constraintTop_toTopOf="@+id/register_gl_top" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_email_et_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@null"
            android:hint=" "
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/register_gl_right"
            app:layout_constraintStart_toStartOf="@+id/register_gl_left"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_email_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_selector"
                android:fontFamily="@font/notosanskr_thin"
                android:hint="@string/email_tv"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:text="@={vm.userEmail}"
                android:textColor="@color/colorWhite"
                android:textCursorDrawable="@drawable/cursor_orange"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_email_verify_btn"
            android:layout_width="46dp"
            android:layout_height="26dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/register_btn_selector"
            android:text="인증"
            android:onClick="@{()->vm.requestVerifyCode()}"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/register_email_et_layout"
            app:layout_constraintEnd_toEndOf="@+id/register_email_et_layout"
            app:layout_constraintTop_toTopOf="@+id/register_email_et_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_email_verify_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint=" "
            app:errorEnabled="true"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/register_gl_right"
            app:layout_constraintStart_toStartOf="@+id/register_gl_left"
            app:layout_constraintTop_toBottomOf="@+id/register_email_et_layout">

            <com.add.ad.presentation.ui.customView.ClearEditText
                android:id="@+id/register_email_verify_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_selector"
                android:fontFamily="@font/notosanskr_thin"
                android:hint="@string/verify_code_tv"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:text="@={vm.emailVerifyCode}"
                android:textColor="@color/colorWhite"
                android:textCursorDrawable="@drawable/cursor_orange"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_code_verify_btn"
            android:layout_width="46dp"
            android:layout_height="26dp"
            android:background="@drawable/register_btn_selector"
            android:onClick="@{()->vm.confirmCode()}"
            android:text="완료"
            android:visibility="gone"
            android:layout_marginBottom="4dp"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/register_email_verify_layout"
            app:layout_constraintEnd_toEndOf="@+id/register_email_et_layout"
            app:layout_constraintTop_toBottomOf="@+id/register_email_et_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_pw_et_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint=" "
            android:visibility="visible"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/register_gl_right"
            app:layout_constraintStart_toStartOf="@+id/register_gl_left"
            app:layout_constraintTop_toBottomOf="@+id/register_email_verify_layout">

            <com.add.ad.presentation.ui.customView.ClearEditText
                android:id="@+id/register_pw_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_selector"
                android:fontFamily="@font/notosanskr_thin"
                android:hint="@string/pw_tv"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text="@={vm.userPassword}"
                android:textColor="@color/colorWhite"
                android:textCursorDrawable="@drawable/cursor_orange"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_pw_check_et_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint=" "
            android:visibility="visible"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/register_gl_right"
            app:layout_constraintStart_toStartOf="@+id/register_gl_left"
            app:layout_constraintTop_toBottomOf="@+id/register_pw_et_layout">

            <com.add.ad.presentation.ui.customView.ClearEditText
                android:id="@+id/register_pw_check_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_selector"
                android:fontFamily="@font/notosanskr_thin"
                android:hint="@string/pw_check_tv"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text="@={vm.userPasswordCheck}"
                android:textColor="@color/colorWhite"
                android:textCursorDrawable="@drawable/cursor_orange"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_next_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/gray_radius_view"
            android:onClick="@{()->vm.clickSignUpNext()}"
            android:text="다음"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/register_gl_right"
            app:layout_constraintStart_toStartOf="@+id/register_gl_left"
            app:layout_constraintTop_toBottomOf="@+id/register_pw_check_et_layout" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/register_gl_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.14" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/register_gl_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.86" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/register_gl_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>